Apply suggestions from code review
Co-authored-by: Yan Thomas <61414485+Yan-Thomas@users.noreply.github.com>
Co-authored-by: Elian ☕️ <hello@elian.codes>

--- a/src/content/docs/en/guides/backend/google-firebase.mdx
+++ b/src/content/docs/en/guides/backend/google-firebase.mdx
@@ -16,7 +16,7 @@ import FileTree from '~/components/FileTree.astro'
 ### Prerequisites
 
 - A Firebase project with a web app configured: Check the [Firebase docs](https://firebase.google.com/docs/web/setup) for more information on how to create a new project and configure a web app.
-- An Astro project with server side rendering (SSR) enabled: Check our [server side rendering](/en/guides/server-side-rendering/#enabling-ssr-in-your-project) page for more information.
+- An Astro project with server-side rendering (SSR) enabled: Check our [server-side rendering](/en/guides/server-side-rendering/#enabling-ssr-in-your-project) page for more information.
 - Firebase credentials: You will need two sets of credentials to connect Astro to Firebase:
   - Web app credentials: These credentials will be used by the client side of your app. You can find them in the Firebase console under Project settings > General, scroll down to the "Your apps" section and click on the "Web app" icon.
   - Project credentials: These credentials will be used by the server side of your app. You can generate them in the Firebase console under Project settings > Service accounts > Firebase Admin SDK > Generate new private key.
@@ -88,7 +88,7 @@ To connect Astro with Firebase, install the following packages using the single 
 </PackageManagerTabs>
 
 Next, create a folder named `firebase` in the `src/` directory. 
-Inside the firebase folder create two files, `client.ts` and `server.ts`.
+Inside the `firebase` folder create two files, `client.ts` and `server.ts`.
 
 The `client.ts` file will contain the code to initialize Firebase in the client using the web app credentials.
 
@@ -366,7 +366,7 @@ if (!user) {
 
 In the frontmatter of the page, using the Firebase server app we verify the user's session cookie. If the user is not authenticated, the page will redirect the user to the `/signin` page.
 
-In the markup of the page, we display the user's name and a button to sign out. The signout button will send a `GET` request to the `/api/auth/signout` endpoint. The endpoint will delete the user's session cookie and redirect the user to the `/signin` page.
+In the markup of the page, we display the user's name and a button to sign out. The button will send a `GET` request to the `/api/auth/signout` endpoint. The endpoint will delete the user's session cookie and redirect the user to the `/signin` page.
 
 Finally, create a file named `signin.astro` inside the `pages` folder.
 
