extend server side env variables

--- a/src/content/docs/en/guides/backend/google-firebase.mdx
+++ b/src/content/docs/en/guides/backend/google-firebase.mdx
@@ -29,6 +29,12 @@ To add your Firebase credentials to Astro, create an `.env` file in the root of 
 FIREBASE_PRIVATE_KEY_ID=YOUR_SPACE_ID
 FIREBASE_PRIVATE_KEY=YOUR_DELIVERY_TOKEN
 FIREBASE_PROJECT_ID=YOUR_PREVIEW_TOKEN
+FIREBASE_CLIENT_EMAIL=YOUR_CLIENT_EMAIL
+FIREBASE_CLIENT_ID=YOUR_CLIENT_ID
+FIREBASE_AUTH_URI=YOUR_AUTH_URI
+FIREBASE_TOKEN_URI=YOUR_TOKEN_URI
+FIREBASE_AUTH_CERT_URL=YOUR_AUTH_CERT_URL
+FIREBASE_CLIENT_CERT_URL=YOUR_CLIENT_CERT_URL
 ```
 
 Now, you should be able to use these environment variables in your project. 
@@ -40,6 +46,12 @@ interface ImportMetaEnv {
   readonly FIREBASE_PRIVATE_KEY_ID: string;
   readonly FIREBASE_PRIVATE_KEY: string;
   readonly FIREBASE_PROJECT_ID: string;
+  readonly FIREBASE_CLIENT_EMAIL: string;
+  readonly FIREBASE_CLIENT_ID: string;
+  readonly FIREBASE_AUTH_URI: string;
+  readonly FIREBASE_TOKEN_URI: string;
+  readonly FIREBASE_AUTH_CERT_URL: string
+  readonly FIREBASE_CLIENT_CERT_URL: stirng;
 }
 
 interface ImportMeta {
@@ -97,11 +109,11 @@ import { initializeApp } from "firebase/app";
 
 const firebaseConfig = {
   apiKey: "my-public-api-key",
-  authDomain: "astro-firebase.firebaseapp.com",
-  projectId: "astro-firebase",
-  storageBucket: "astro-firebase.appspot.com",
-  messagingSenderId: "469295531959",
-  appId: "1:469295531959:web:20b9159723f8113f2744f2",
+  authDomain: "my-auth-domain",
+  projectId: "my-project-id",
+  storageBucket: "my-storage-bucket,
+  messagingSenderId: "my-sender-id",
+  appId: "my-app-id",
 };
 
 export const app = initializeApp(firebaseConfig);
@@ -122,13 +134,12 @@ const serviceAccount = {
   project_id: import.meta.env.FIREBASE_PROJECT_ID,
   private_key_id: import.meta.env.FIREBASE_PRIVATE_KEY_ID,
   private_key: import.meta.env.FIREBASE_PRIVATE_KEY,
-  client_email: "example@astro.build",
-  client_id: "100068165101237748424",
-  auth_uri: "https://accounts.google.com/o/oauth2/auth",
-  token_uri: "https://oauth2.googleapis.com/token",
-  auth_provider_x509_cert_url: "https://www.googleapis.com/oauth2/v1/certs",
-  client_x509_cert_url:
-    "https://www.googleapis.com/robot/v1/metadata/x509/firebase-adminsdk.iam.gserviceaccount.com",
+  client_email: import.meta.env.FIREBASE_CLIENT_EMAIL,
+  client_id: import.meta.env.FIREBASE_CLIENT_ID,
+  auth_uri: import.meta.env.FIREBASE_AUTH_URI,
+  token_uri: import.meta.env.FIREBASE_TOKEN_URI,
+  auth_provider_x509_cert_url: import.meta.env.FIREBASE_AUTH_CERT_URL,
+  client_x509_cert_url: import.meta.env.FIREBASE_CLIENT_CERT_URL,
 };
 
 export const app = initializeApp({
