--- a/src/content/docs/ja/editor-setup.mdx
+++ b/src/content/docs/ja/editor-setup.mdx
@@ -57,7 +57,9 @@ JetBrainsの次期IDEである[Fleet](https://www.jetbrains.com/fleet/)は言語
 
 ### Prettier
 
-[Prettier](https://prettier.io/)はJavaScript、HTML、CSSなどのための人気のフォーマッターです。`.astro` ファイルをフォーマットするためには、[公式のAstro Prettierプラグイン](https://github.com/withastro/prettier-plugin-astro)を使用してください。
+[Prettier](https://prettier.io/)はJavaScript、HTML、CSSなどのための人気のフォーマッターです。[Astro VS Code拡張機能](https://marketplace.visualstudio.com/items?itemName=astro-build.astro-vscode)や[他のエディタ内でAstro言語サーバー](#その他のコードエディタ)を使用している場合、Prettierによるコードのフォーマット機能は含まれています。
+
+（CLIなど）エディタの外や、Astroのエディタツールをサポートしていないエディタ内で`.astro`ファイルをフォーマットするためには、[公式のAstro Prettierプラグイン](https://github.com/withastro/prettier-plugin-astro)をインストールしてください。
 
 まず、Prettierとプラグインをインストールしましょう:
 
