--- a/src/content/docs/en/guides/middleware.mdx
+++ b/src/content/docs/en/guides/middleware.mdx
@@ -11,16 +11,16 @@ import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 Middleware is an experimental Astro feature introduced in v2.4. This API is subject to change before it is marked as stable.
 :::
 
-## Enabling Assets in your Project
+## Enabling Middleware in your Project
 
 Enabling middleware should not cause any breaking changes in your project, but you may encounter errors or bugs as you use experimental middleware features.
 
 Please refer to the [middleware RFC](https://github.com/withastro/roadmap/pull/555) for more information.
 
 
-### Update Astro config
+There are two ways to enable experimental middleware support: update `astro.config.mjs` manually or use the CLI.
 
-To enable built-in asset support, add the following lines to your `astro.config.mjs` configuration file:
+To enable middleware manually, add the following lines to your `astro.config.mjs` configuration file:
 
 ```js title="astro.config.mjs" ins={4-6}
 import { defineConfig } from 'astro/config';
@@ -32,19 +32,21 @@ export default defineConfig({
 });
 ```
 
+To enable using the CLI instead, you can use the `--experimental-middleware` flag
+
 ## Basic Usage
 
 1. Create `src/middleware.js|ts` (Alternatively, you can create `src/middleware/index.js|ts`.)
 
-2. Inside this file, export an [`onRequest()`](#onrequest) function that modifies a [`locals`](#locals) object. This must not be a default export.
+2. Inside this file, export an [`onRequest()`](#onrequest) function. This must not be a default export.
 
 ```js title="src/middleware.js"
-export function onRequest ({ locals, request }, resolve) {
-	// locals = {}
+export function onRequest ({ locals, request }) {
+	// intercept response data from a request
 };
 ```
 
-3. Inside any `.astro` file, access `Astro.locals`
+3. Inside any `.astro` file, access response data using `Astro.locals`
 
 ```astro title="src/components/Component.astro"
 ---
@@ -146,17 +148,19 @@ validation response
 
 ### onRequest()
 
-A required exported function from `src/middleware.js` that will be called before rendering every page or API route. It accepts two arguments: [context](#context) and [next()](#next-)
+A required exported function from `src/middleware.js` that will be called before rendering every page or API route. It accepts two optional arguments: [context](#context) and [next()](#next-)
 
 ### context
 
-An object that includes information to be made available to other middleware, API routes and `.astro` routes during the rendering process. 
+An object that includes information to be made available to other middleware, API routes and `.astro` routes during the rendering process.
 
-This is a required argument passed to `onRequest()` that must contain the [`locals`](#locals) object as well as any additional properties to be shared during rendering. For example, the `context` object may include cookies used in authentication.
+This is an optional argument passed to `onRequest()` that may contain the [`locals`](#locals) object as well as any additional properties to be shared during rendering. For example, the `context` object may include cookies used in authentication.
+
+This is the same `context` object that is passed to API routes.
 
 ### next ()
 
-A function that retrieves that intercepts (reads and modifies) the `Response` of a `Request` or calls the "next" middleware in the chain. For example, this function could modify the HTML body of a response.
+A function that intercepts (reads and modifies) the `Response` of a `Request` or calls the "next" middleware in the chain and returns a `Response`. For example, this function could modify the HTML body of a response.
 
 This is an optional argument of `onRequest()`.
 
