--- a/src/content/docs/en/guides/middleware.mdx
+++ b/src/content/docs/en/guides/middleware.mdx
@@ -5,7 +5,11 @@ i18nReady: false
 ---
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
-**Middleware** is enabled in Astro behind an experimental flag. Middleware allows you to intercept requests and responses and inject behaviors dynamically every time a page or endpoint is about to be rendered. This also allows you to set and share request-specific information across endpoints and pages by mutating a `locals` object that is available in all Astro components and API endpoints. Middleware is available in both SSG and SSR Astro projects.
+**Middleware** is enabled in Astro behind an experimental flag. Middleware allows you to intercept requests and responses and inject behaviors dynamically every time a page or endpoint is about to be rendered. 
+
+This also allows you to set and share request-specific information across endpoints and pages by mutating a `locals` object that is available in all Astro components and API endpoints
+
+Middleware is available in both SSG and SSR Astro projects.
 
 :::caution
 Middleware is an experimental Astro feature introduced in v2.4. This API is subject to change before it is marked as stable.
@@ -43,6 +47,8 @@ To enable using the CLI instead, you can use the `--experimental-middleware` fla
 ```js title="src/middleware.js"
 export function onRequest ({ locals, request }) {
 	// intercept response data from a request
+  // optionally, transform the response by modifying `locals`
+  locals.foo = "bar"
 };
 ```
 
