uddated code example

--- a/src/content/docs/en/guides/middleware.mdx
+++ b/src/content/docs/en/guides/middleware.mdx
@@ -48,7 +48,7 @@ To enable using the CLI instead, you can use the `--experimental-middleware` fla
 export function onRequest ({ locals, request }) {
 	// intercept response data from a request
   // optionally, transform the response by modifying `locals`
-  locals.foo = "bar"
+  locals.title = "New title"
 };
 ```
 
@@ -58,7 +58,7 @@ export function onRequest ({ locals, request }) {
 ---
 const data = Astro.locals;
 ---
-
+<h1>{data.title}</h1>
 <p>This {data.property} is from middleware.</p>
 
 ```
