--- a/src/content/docs/en/guides/middleware.mdx
+++ b/src/content/docs/en/guides/middleware.mdx
@@ -149,7 +149,7 @@ This is the same `context` object that is passed to API routes.
 
 A function that intercepts (reads and modifies) the `Response` of a `Request` or calls the "next" middleware in the chain and returns a `Response`. For example, this function could modify the HTML body of a response.
 
-This is an optional argument of `onRequest()`.
+This is an optional argument of `onRequest()`; however, your middleware **must** either return a `Response` or call `next()`.
 
 
 ### locals
