--- a/src/content/docs/en/guides/middleware.mdx
+++ b/src/content/docs/en/guides/middleware.mdx
@@ -82,7 +82,7 @@ For more usage examples, please see [the middleware RFC proposal](https://github
 
 ### Chaining middleware
 
-Multiple middlewares can be joined, in a specified order, using [`sequence()`](#sequence)
+Multiple middlewares can be joined, in a specified order, using [`sequence()`](#sequence):
 
 ```js title="src/middleware.js"
 import {sequence} from "astro/middleware";
@@ -120,7 +120,7 @@ async function greeting(_, next) {
 export const onRequest = sequence(validation, auth, greeting);
 ```
 
-will result in the following console order:
+This will result in the following console order:
 
 ```sh
 validation request
@@ -133,11 +133,11 @@ validation response
 
 ## API reference
 
-### onRequest()
+### `onRequest()`
 
 A required exported function from `src/middleware.js` that will be called before rendering every page or API route. It accepts two optional arguments: [context](#context) and [next()](#next-)
 
-### context
+### `context`
 
 An object that includes information to be made available to other middleware, API routes and `.astro` routes during the rendering process.
 
@@ -145,23 +145,24 @@ This is an optional argument passed to `onRequest()` that may contain the [`loca
 
 This is the same `context` object that is passed to API routes.
 
-### next ()
+### `next()`
 
 A function that intercepts (reads and modifies) the `Response` of a `Request` or calls the "next" middleware in the chain and returns a `Response`. For example, this function could modify the HTML body of a response.
 
 This is an optional argument of `onRequest()`; however, your middleware **must** either return a `Response` or call `next()`.
 
 
-### locals
-An object containing data from a response that can be manipulated inside middleware. This `locals` object is forwarded across the request handling process and is available as a property to APIContext and AstroGlobal. This allows data to be shared between middlewares, API routes, and .astro pages. This is useful for storing request-specific data, such as user data, across the rendering step.
+### `locals`
+An object containing data from a response that can be manipulated inside middleware. 
+9
+This `locals` object is forwarded across the request handling process and is available as a property to APIContext and AstroGlobal. This allows data to be shared between middlewares, API routes, and .astro pages. This is useful for storing request-specific data, such as user data, across the rendering step.
 
-- locals needs to be serializable: The information must be serializable because storing information that evaluates at runtime is unsafe. If, for example, we were able to store With a JavaScript function, an attacker could exploit the victim's website and execute some unsafe code.
-- locals can't be overridden: The value of locals needs to be an object, and it can't be overridden at runtime. Doing so would risk wiping out all the information stored by the user.
+`locals` is an object that lives and dies within a single Astro route; when your route page is rendered, `locals` won't exist anymore and a new one will be created. Information that needs to persist across multiple page requests must be stored elsewhere.
 
-It's important to note that locals is an object that lives and dies within a single Astro route; when your route page is rendered, locals won't exist anymore and a new one will be created.
+In `dev` mode, Astro perform checks and will throw an error if the following conditions are not met:
+- `locals` needs to be serializable: The information must be serializable because storing information that evaluates at runtime is unsafe. If, for example, we were able to store a JavaScript function, an attacker could exploit the victim's website and execute some unsafe code.
+- `locals` can't be overridden: The value of locals needs to be an object, and it can't be overridden at runtime. Doing so would risk wiping out all the information stored by the user.
 
-If a user needs to persist some information that lives among multiple pages requests, they will need to store that information somewhere else.
-
-### sequence()
+### `sequence()`
 
 A function that accepts middleware functions as arguments, and will execute them in the order in which they are passed.
