--- a/src/content/docs/en/guides/middleware.mdx
+++ b/src/content/docs/en/guides/middleware.mdx
@@ -36,7 +36,7 @@ export default defineConfig({
 });
 ```
 
-To enable using the CLI instead, you can use the `--experimental-middleware` flag
+To enable using the CLI instead, you can use the `--experimental-middleware` flag.
 
 ## Basic Usage
 
