--- a/src/content/docs/es/guides/migrate-to-astro/from-gitbook.mdx
+++ b/src/content/docs/es/guides/migrate-to-astro/from-gitbook.mdx
@@ -65,7 +65,7 @@ Cuando habilites Git Sync, asegúrate de especificar "**GitBook a GitHub**" como
 
 Después de sincronizar el contenido, ahora tendrás una copia de tu contenido de GitBook en tu repositorio de Astro. Deshabilita la sincronización de git para evitar futuras sincronizaciones con GitBook.
 
-Toma en cuenta que aunque ahora tienes tu contenido migrado a tu proyecto de Astro, no será inmediatamente utilizable. Para usar este contenido en tu sitio de Astro, necesitarás pasar algo de tiempo cambiando manualmente la sintaxis de GitBook a un formato compatible con Astro. En particular:
+Ten en cuenta que aunque ahora tienes tu contenido migrado a tu proyecto de Astro, no será inmediatamente utilizable. Para usar este contenido en tu sitio de Astro, necesitarás pasar algo de tiempo cambiando manualmente la sintaxis de GitBook a un formato compatible con Astro. En particular:
 
 - La integración de [Markdoc de Astro](/es/guides/integrations-guide/markdoc/) requiere que la extensión del archivo sea `.mdoc`. Esto es para evitar conflictos con otras extensiones de Markdown como `.mdx` y `.md`.
 - La sintaxis de GitBook difiere de Markdoc donde el prefijo `/` que denota una etiqueta de cierre se reemplaza con `end` para los archivos de GitBook. Necesitarás actualizar esta notación en todos tus archivos.
