Use optional chaining to ensure posts can be found
Previously a TS error appeared to explain that the parser "Cannot read properties of undefined (reading 'includes')".

Optional chaining ensures the correct render of the screen.

--- a/src/content/docs/en/tutorial/5-astro-api/2.mdx
+++ b/src/content/docs/en/tutorial/5-astro-api/2.mdx
@@ -86,13 +86,13 @@ You can create entire sets of pages dynamically using `.astro` files that export
     ---
     ```
 
-2. Filter your list of posts to only include posts that contain the page's own tag.
+2. Filter your list of posts to only include posts that contain the page's own tag. As the 'tags' property may not exist you will need to use optional chaining. 
 
     ```astro title="/src/pages/tags/[tag].astro" ins={4}
     ---
     const { tag } = Astro.params;
     const { posts } = Astro.props;
-    const filteredPosts = posts.filter((post) => post.frontmatter.tags.includes(tag));
+    const filteredPosts = posts.filter((post) => post.frontmatter.tags?.includes(tag));
     ---
     ```
 
