--- a/src/content/docs/en/reference/configuration-reference.mdx
+++ b/src/content/docs/en/reference/configuration-reference.mdx
@@ -736,8 +736,8 @@ To enable this feature, set `experimental.assets` to `true` in your Astro config
 **Default:** `never`
 </p>
 
-Control whether styles are sent to the browser in a separate css file or inlined into <style> tags. Choose from the following options:
- - `'always'` - all styles are inlined into <style> tags
+Control whether styles are sent to the browser in a separate css file or inlined into `<style>` tags. Choose from the following options:
+ - `'always'` - all styles are inlined into `<style>` tags
  - `'auto'` - only stylesheets smaller than `ViteConfig.build.assetsInlineLimit` (default: 4kb) are inlined. Otherwise, styles are sent in external stylesheets.
  - `'never'` - all styles are sent in external stylesheets
 
