Apply suggestions from code review
Co-authored-by: Paul Valladares <85648028+dreyfus92@users.noreply.github.com>

--- a/src/content/docs/es/guides/migrate-to-astro/from-nextjs.mdx
+++ b/src/content/docs/es/guides/migrate-to-astro/from-nextjs.mdx
@@ -199,7 +199,7 @@ Next tiene dos métodos diferentes para crear archivos de diseño, cada uno de l
 
 - [El directorio `/app` (en beta)](https://beta.nextjs.org/docs/routing/pages-and-layouts#layouts)
 
-Cada página de Astro requiere explícitamente que se incluyan las etiquetas `<html>`, `<head>`, y `<body>`, por lo que es comñun reutilizar un archivo de diseño en varias páginas. Astro utiliza [`<slot />`](/es/core-concepts/astro-components/#slots) para el contenido de la página, sin necesidad de importar ninguna declaración. Observa la estructura estándar de templating de HTML y el acceso directo al elemento `<head>`:  
+Cada página de Astro requiere explícitamente que se incluyan las etiquetas `<html>`, `<head>`, y `<body>`, por lo que es común reutilizar un archivo de diseño en varias páginas. Astro utiliza [`<slot />`](/es/core-concepts/astro-components/#slots) para el contenido de la página, sin necesidad de importar ninguna declaración. Observa la estructura estándar de templating de HTML y el acceso directo al elemento `<head>`:  
 
 ```astro title="src/layouts/Layout.astro"
 ---
@@ -314,11 +314,11 @@ Estas [páginas `.astro`](/es/core-concepts/astro-pages/) deben estar ubicadas d
 
 Astro tiene soporte incorporado para Markdown y una integración opcional para archivos MDX. Puedes reutilizar cualquier archivo [Markdown y MDX](/es/guides/markdown-content/) existente, pero pueden requerir algunos ajustes en su frontmatter, como agregar [la propiedad especial de frontmatter `layout`de Astro](/es/core-concepts/layouts/#plantillas-de-markdownmdx). Ya no necesitarás crear manualmente páginas para cada ruta generada por Markdown. Estos archivos se pueden colocar dentro de`src/pages/` para aprovechar el enrutamiento automático basado en archivos.
 
-Alternativamente, puedes usar [colecciones de contenido](/es/guides/content-collections/) en Astro para almacenar y administrar tu contenido. Cuando forman parte de una colección, los archivos Markdown y MDX vivirán en carpetas dentro de `src/content/`.  Deberás recuperar el contenido tú mismo y [generar esas páginas dinámicamente](/es/guides/content-collections/#generating-routes-from-content).
+Alternativamente, puedes usar [colecciones de contenido](/es/guides/content-collections/) en Astro para almacenar y administrar tu contenido. Cuando forman parte de una colección, los archivos Markdown y MDX vivirán en carpetas dentro de `src/content/`. Deberás recuperar el contenido tú mismo y [generar esas páginas dinámicamente](/es/guides/content-collections/#generating-routes-from-content).
 
 ### Migrando Tests
 
-Como Astro produce HTML sin procesar, es posible escribir tests end-to-end utilizando la salida del paso de compilación. Cualquier test end-to-end escrito anteriormente  podría funcionar sin problemas si has podido coincidir con el marcado de tu sitio de Next. Bibliotecas de testing como Jest y React Testing Library pueden ser importadas y utilizadas en Astro para testear tus componentes de React.
+Como Astro produce HTML sin procesar, es posible escribir tests end-to-end utilizando la salida del paso de compilación. Cualquier test end-to-end escrito anteriormente podría funcionar sin problemas si has podido coincidir con el marcado de tu sitio de Next. Bibliotecas de testing como Jest y React Testing Library pueden ser importadas y utilizadas en Astro para poner a prueba tus componentes de React.
 
 Consulta la [guía de testing](/es/guides/testing/) de Astro para obtener más información.
 
@@ -333,7 +333,7 @@ Convierte cualquier componente de Next `<Link to="">`, `<NavLink>` etc. a etique
 <a href="/blog">Blog</a>
 ```
 
-Astro no utiliza ningún componentes especial para los enlaces, aunque puedes crear tu propio componente `<Link>`. Luego puedes importar y usar este `<Link>` como lo harías con cualquier otro componente.
+Astro no utiliza ningún componente especial para los enlaces, aunque puedes crear tu propio componente `<Link>`. Luego puedes importar y usar este `<Link>` como lo harías con cualquier otro componente.
 
 ```astro title="src/components/Link.astro"
 ---
@@ -344,9 +344,9 @@ const { to } = Astro.props
 
 ### Migrando las importaciones de Next a Astro
 
-Actualiza cualquier [importación de archivos](/es/guides/imports/) para referencias rutas de archivo relativas de maneta exacta. Esto puede hacerse utilizando un [alias de importación](/es/guides/typescript/#alias-de-importación), o escribiendo la ruta relativa completa. 
+Actualiza cualquier [importación de archivos](/es/guides/imports/) para referencias rutas de archivo relativas de manera exacta. Esto puede hacerse utilizando un [alias de importación](/es/guides/typescript/#alias-de-importación), o escribiendo la ruta relativa completa. 
 
-Ten encuenta que `.astro` y varios otros tipos de archivos deben ser importados con su extensión de achivo completa.
+Ten encuenta que `.astro` y varios otros tipos de archivos deben ser importados con su extensión de archivo completa.
 
 ```astro title="src/pages/authors/Fred.astro"
 ---
