i18n(ja): Add contribute.mdx

--- a/src/content/docs/ja/getting-started.mdx
+++ b/src/content/docs/ja/getting-started.mdx
@@ -109,6 +109,6 @@ Astroサイトの主要なコンセプトとパターンの例をご覧くださ
 
 ## 貢献する
 
-このドキュメントは、以下の協力者によって提供されています。 [GitHubで参加しましょう！](https://github.com/withastro/docs)
+このドキュメントは、多くの方々の協力によって提供されています。[GitHubで参加しましょう！](https://github.com/withastro/docs)
 
 <ContributorList githubRepo="withastro/docs" />
