Apply suggestions from code review
Co-authored-by: Waxer59 <78129249+Waxer59@users.noreply.github.com>

--- a/src/content/docs/es/tutorial/1-setup/2.mdx
+++ b/src/content/docs/es/tutorial/1-setup/2.mdx
@@ -1,9 +1,9 @@
 ---
 type: tutorial
-title: Crea tu primer proyecto Astro
+title: Crea tu primer proyecto en Astro
 i18nReady: true
 description: |-
-  Tutorial: Crea tu primer blog Astro —
+  Tutorial: Crea tu primer blog en Astro —
   Crea un nuevo proyecto para el tutorial de Astro y prepárate para codificar
 ---
 import Badge from '~/components/Badge.astro';
@@ -16,12 +16,12 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 
 <PreCheck>
-  - Ejecuta el asistente de configuración `create astro` para crear un nuevo proyecto Astro
-  - Inicia el servidor Astro en modo de desarrollo (dev)
-  - Vea una vista previa en directo de su sitio web en su navegador
+  - Ejecutar el asistente de configuración `create astro` para crear un nuevo proyecto Astro
+  - Iniciar el servidor Astro en modo de desarrollo (dev)
+  - Ver una vista previa en directo de tu sitio web en tu navegador
 </PreCheck>
 
-## Inicie el asistente de configuración de Astro
+## Inicia el asistente de configuración de Astro
 
 La forma preferida de crear un nuevo sitio Astro es a través de nuestro asistente de configuración `create astro`.
 
@@ -59,15 +59,15 @@ La forma preferida de crear un nuevo sitio Astro es a través de nuestro asisten
 
 5. Cuando aparezca la pregunta "Would you like to install dependencies?", escribe `y`.
 
-6. Cuando el prompt te pregunte si planeas escribir TypeScript, teclea `n`. 
+6. Cuando el prompt te pregunte si planeas escribir TypeScript, escribe `n`. 
 
-7. Cuando el prompt te pregunte: "Would you like to initialize a new git repository?", escriba `y`.
+7. Cuando el prompt te pregunte: "Would you like to initialize a new git repository?", escribe `y`.
 
-Cuando finalice el asistente de instalación, ya no necesitarás esta terminal. Ahora puede abrir VS Code para continuar.
+Cuando finalice el asistente de instalación, ya no necesitarás esta terminal. Ahora puedes abrir VS Code para continuar.
 
-## Abra su proyecto en VS Code
+## Abre tu proyecto en VS Code
 
-1. Abra VS Code. Se te pedirá que abra una carpeta. Elige la carpeta que creaste durante el asistente de instalación.
+1. Abre VS Code. Se te pedirá que abra una carpeta. Elige la carpeta que creaste durante el asistente de instalación.
 
 2. Si es la primera vez que abres un proyecto Astro, deberías ver una notificación preguntándote si deseas instalar las extensiones recomendadas. Haz clic para ver las extensiones recomendadas y elige [Astro language support extension](https://marketplace.visualstudio.com/items?itemName=astro-build.astro-vscode). Esto proporcionará resaltado de sintaxis y autocompletado para tu código Astro.
 
@@ -113,7 +113,7 @@ Para poder previsualizar los archivos de tu proyecto _como un sitio web_ mientra
 
     Ahora deberías ver la confirmación en el terminal que Astro está siendo ejecutando en modo dev. 🚀
 
-## Vea una vista previa de su sitio web
+## Ver una vista previa de tu sitio web
 
 Tus archivos de proyecto contienen todo el código necesario para mostrar un sitio web Astro, pero el navegador es el responsable de mostrar tu código como páginas web.
 
@@ -127,7 +127,7 @@ Tus archivos de proyecto contienen todo el código necesario para mostrar un sit
 
 :::tip[Usando el servidor de desarrollo Astro]
 
-Mientras el servidor Astro esté funcionando en modo de desarrollo, NO podrás ejecutar comandos en esa terminal. En su lugar, este panel te dará retroalimentación mientras previsualiza su sitio.
+Mientras el servidor Astro esté funcionando en modo de desarrollo, NO podrás ejecutar comandos en esa terminal. En su lugar, este panel te dará retroalimentación mientras previsualizas tu sitio.
 
 Puedes detener el servidor de desarrollo en cualquier momento y volver al símbolo del sistema escribiendo <kbd>Ctrl + C</kbd> en el terminal.
 
