--- a/src/content/docs/es/tutorial/1-setup/5.mdx
+++ b/src/content/docs/es/tutorial/1-setup/5.mdx
@@ -3,7 +3,7 @@ type: tutorial
 title: Despliega tu sitio en la web
 i18nReady: true
 description: |-
-  Tutorial: Crea tu primer blog Astro —
+  Tutorial: Crea tu primer blog en Astro —
   Conecta el repositorio GitHub de tu proyecto tutorial a Netlify y despliégalo en la web
 ---
 import Badge from '~/components/Badge.astro';
@@ -16,11 +16,11 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 
 <PreCheck>
-  - Añade tu repositorio GitHub como una nueva aplicación Netlify
-  - Despliega tu sitio Astro en la web
+  - Añadir tu repositorio GitHub como una nueva aplicación Netlify
+  - Desplegar tu sitio de Astro en la web
 </PreCheck>
 
-Aquí, conectarás tu repositorio de GitHub a Netlify. Netlify utilizará ese proyecto para construir y desplegar tu sitio en vivo en la web cada vez que confirmes un cambio en tu código. 
+Aquí, conectarás tu repositorio de GitHub a Netlify. Netlify utilizarás ese proyecto para construir y desplegar tu sitio en vivo en la web cada vez que confirmes un cambio en tu código. 
 
 :::tip[usaremos...]
 Este tutorial utilizará **Netlify**, pero te invitamos a utilizar tu servicio de alojamiento preferido para desplegar tu sitio en Internet.
@@ -32,7 +32,7 @@ Este tutorial utilizará **Netlify**, pero te invitamos a utilizar tu servicio d
 
     Anota tu nombre de usuario. Verás tu panel de control y cualquiera de los sitios que crees en `https://app.netlify.com/teams/username`.
 
-2. Clic en <kbd>Añadir nuevo sitio</kbd> > <kbd>Importar un proyecto existente</kbd>.
+2. Haz clic en <kbd>Añadir nuevo sitio</kbd> > <kbd>Importar un proyecto existente</kbd>.
 
     Se te pedirá que te conectes a un proveedor de Git. Elige GitHub y sigue los pasos que aparecen en pantalla para autenticar tu cuenta de GitHub. A continuación, elige el repositorio GitHub de tu proyecto Astro de la lista proporcionada.
 
@@ -42,7 +42,7 @@ Enhorabuena, ¡tienes un sitio web Astro!
 
 ## Cambia el nombre del proyecto
 
-En la página de resumen de tu sitio en Netlify, verá el nombre de su proyecto generado aleatoriamente, y la URL de tu sitio web de la forma `https://project-name-123456.netlify.app`. Puede cambiar el nombre de tu proyecto por algo más memorable y esto actualizará automáticamente tu URL.
+En la página de resumen de tu sitio en Netlify, verás el nombre de tu proyecto generado aleatoriamente, y la URL de tu sitio web de la forma `https://project-name-123456.netlify.app`. Puede cambiar el nombre de tu proyecto por algo más memorable y esto actualizará automáticamente tu URL.
 
 ## Visita tu nuevo sitio web
 
@@ -56,7 +56,7 @@ Haz clic en la URL en la configuración de tu sitio o escríbela en una ventana 
 
 
 
-Tu quieres actualizar la página de inicio de tu sitio web actual. ¿Qué pasos debes seguir?
+Quieres actualizar la página de inicio de tu sitio web actual. ¿Qué pasos debes seguir?
 
   <MultipleChoice>
     <Option>
