--- a/src/content/docs/es/tutorial/2-pages/1.mdx
+++ b/src/content/docs/es/tutorial/2-pages/1.mdx
@@ -15,9 +15,9 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 Ahora que ya sabes que los archivos `.astro` son los responsables de las páginas de tu sitio web, ¡vamos a crear uno!
 
 <PreCheck>
-  - Crea dos nuevas páginas en su sitio web: Acerca de y Blog
-  - Añade enlaces de navegación a tus páginas
-  - Despliega en la web una versión actualizada de tu sitio web
+  - Crear dos nuevas páginas en tu sitio web: Acerca de y Blog
+  - Añadir enlaces de navegación a tus páginas
+  - Desplegar en la web una versión actualizada de tu sitio web
 </PreCheck>
 
 ## Crear un nuevo archivo `.astro`
