--- a/src/content/docs/es/tutorial/2-pages/2.mdx
+++ b/src/content/docs/es/tutorial/2-pages/2.mdx
@@ -19,9 +19,9 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 Ahora que ya has creado páginas con archivos `.astro`, vamos a crear algunos posts con archivos `.md`.
 
 <PreCheck>
-  - Crea una nueva carpeta y crea un nuevo post
+  - Crear una nueva carpeta y un nuevo post
   - Escribir contenido Markdown
-  - Enlaza tus posts en la página de tu blog
+  - Enlazar tus posts en la página de tu blog
 </PreCheck>
 
 ## Crea tu primer archivo `.md`.
