--- a/src/content/docs/es/tutorial/2-pages/3.mdx
+++ b/src/content/docs/es/tutorial/2-pages/3.mdx
@@ -19,9 +19,9 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 Ahora que ya tienes un sitio web multipágina con contenido HTML, ¡vamos a añadir algo de HTML dinámico!
 
 <PreCheck>
-  - Define el título de tu página en el frontmatter y utilízalo en su HTML
-  - Visualización condicional de elementos HTML
-  - Añade contenido sobre ti
+  - Definir el título de tu página en el frontmatter y utilízarlo en tu HTML
+  - Mostrar elementos HTML condicionalmente
+  - Añadir algo de contenido sobre ti
 </PreCheck>
 
 Cualquier archivo HTML es un lenguaje Astro válido. Pero con Astro puedes hacer mucho más que HTML normal.
