--- a/src/content/docs/es/tutorial/2-pages/4.mdx
+++ b/src/content/docs/es/tutorial/2-pages/4.mdx
@@ -16,7 +16,7 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 Ahora que ya tienes una página "Acerca de" con contenido sobre ti, ¡vamos a darle estilo!
 
 <PreCheck>
-  - Elementos de estilo en una sola página
+  - Estilizar elementos en una sola página.
   - Utilizar variables CSS
 </PreCheck>
 
