--- a/src/content/docs/es/tutorial/3-components/2.mdx
+++ b/src/content/docs/es/tutorial/3-components/2.mdx
@@ -3,8 +3,8 @@ type: tutorial
 title: Crea un pie de página para redes sociales
 i18nReady: true
 description: |-
-  Tutorial: Crea tu primer blog Astro —
-  Crea un nuevo componente desde cero y añádalo a sus páginas
+  Tutorial: Crea tu primer blog en Astro —
+  Crea un nuevo componente desde cero y añádelo a tus páginas
 ---
 import Checklist from '~/components/Checklist.astro';
 import Box from '~/components/tutorial/Box.astro';
@@ -15,11 +15,11 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 
 <PreCheck>
-  - Crea un componente de pie de página
-  - Crea y pasa props a un componente de medios sociales
+  - Crear un componente de pie de página
+  - Crear y pasar props a un componente de redes sociales
 </PreCheck>
 
-Ahora que ya has utilizado componentes Astro en una página, vamos a utilizar un componente dentro de otro componente.
+Ahora que ya has utilizado componentes de Astro en una página, vamos a utilizar un componente dentro de otro componente.
 
 ## Crea un componente de pie de página
 
@@ -54,7 +54,7 @@ Ahora que ya has utilizado componentes Astro en una página, vamos a utilizar un
     </html>
     ```
 
-3. En la vista previa de tu navegador, comprueba que puede ver el nuevo texto del pie de página en cada página.
+3. En la vista previa de tu navegador, comprueba que puedes ver el nuevo texto del pie de página en cada página.
 
 <Box icon="puzzle-piece">
 
@@ -92,7 +92,7 @@ const pageTitle = 'Página de inicio';
 </html>
 ```
 
-## Crea un componente de medios sociales
+## Crea un componente de redes sociales
 
 Dado que puedes tener varias cuentas online a las que enlazarte, puedes crear un único componente reutilizable y mostrarlo varias veces. Cada vez, le pasarás diferentes propiedades (`props`) para que las use: la plataforma online y tu nombre de usuario allí.
 
@@ -148,7 +148,7 @@ Dado que puedes tener varias cuentas online a las que enlazarte, puedes crear un
     </style>
     ```
 
-2. Añade una etiqueta `<style>` a `src/components/Footer.astro` para mejorar el layout de tu contenido.
+2. Añade una etiqueta `<style>` a `src/components/Footer.astro` para mejorar el diseño de tu contenido.
 
     ```astro title="src/components/Footer.astro" ins={4-10}
     ---
@@ -175,7 +175,7 @@ Dado que puedes tener varias cuentas online a las que enlazarte, puedes crear un
 
 ### Ponte a prueba
 
-1. ¿Qué línea de código hay que escribir en el frontmatter de un componente Astro para recibir los valores de `title`, `author` y `date` como props?
+1. ¿Qué línea de código hay que escribir en el frontmatter de un componente de Astro para recibir los valores de `title`, `author` y `date` como props?
 
     <MultipleChoice>
       <Option isCorrect>
@@ -212,8 +212,8 @@ Dado que puedes tener varias cuentas online a las que enlazarte, puedes crear un
 
 <Checklist>
 - [ ] Puedo crear nuevos componentes `.astro` en `src/components/`.
-- [ ] Puedo importar y utilizar componentes Astro dentro de otros componentes Astro.
-- [ ] Puedo pasar props a un componente Astro.
+- [ ] Puedo importar y utilizar componentes de Astro dentro de otros componentes de Astro.
+- [ ] Puedo pasar props a un componente de Astro.
 </Checklist>
 </Box>
 
