--- a/src/content/docs/es/tutorial/3-components/3.mdx
+++ b/src/content/docs/es/tutorial/3-components/3.mdx
@@ -3,7 +3,7 @@ type: tutorial
 title: Constrúyelo tu mismo - Header
 i18nReady: true
 description: >-
-  Tutorial: Crea tu primer blog Astro —
+  Tutorial: Crea tu primer blog en Astro —
 
   Utiliza todo lo que has aprendido hasta ahora para construir un header con responsive
   navigation
@@ -19,7 +19,7 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 Dado que tu sitio se verá en distintos dispositivos, creemos una navegación de página que pueda responder a múltiples tamaños de pantalla.
 
 <PreCheck>
-  - Crea un header para tu sitio que contenga el componente de navegación
+  - Crear un header para tu sitio que contenga el componente de navegación
   - Hacer que el componente de navegación sea responsivo
 </PreCheck>
 
@@ -28,7 +28,7 @@ Dado que tu sitio se verá en distintos dispositivos, creemos una navegación de
 
 ## Pruébalo tu mismo - Crea un nuevo componente Header
 
-1. Crea un nuevo componente header. Importe y utiliza tu componente existente `Navigation.astro` dentro de un elemento `<nav>` que esté dentro de un elemento `<header>`.
+1. Crea un nuevo componente header. Importa y utiliza tu componente existente `Navigation.astro` dentro de un elemento `<nav>` que esté dentro de un elemento `<header>`.
 
     <details>
     <summary>¡Enséñame el código!</summary>
@@ -107,12 +107,12 @@ Dado que tu sitio se verá en distintos dispositivos, creemos una navegación de
 
 2. Copia los siguientes estilos CSS en `global.css`. Estos estilos:
 
-    - Estilo y posición de los enlaces de navegación para móviles
-    - Incluir una clase `expanded` que pueda activarse para mostrar u ocultar los enlaces en móviles.
-    - Utiliza `@media` queries para definir estilos diferentes para tamaños de pantalla mayores.
+    - Estilizan y posicionan los enlaces de navegación para dispositivos móviles
+    - Incluyen una clase `expanded` que puede activarse para mostrar u ocultar los enlaces en dispositivos móviles.
+    - Utilizan una consulta  `@media` para definir estilos diferentes para tamaños de pantalla mayores.
 
     :::tip[diseño mobile-first]
-    Empieza por definir qué debe ocurrir en las pantallas pequeñas. Las pantallas pequeñas requieren layouts más sencillos. A continuación, ajusta tus estilos para adaptarse a dispositivos más grandes. Si diseñas primero el caso complicado, luego tendrás que trabajar para intentar hacerlo sencillo de nuevo.
+    Empieza por definir qué debe ocurrir en las pantallas pequeñas. Las pantallas pequeñas requieren diseños más sencillos. A continuación, ajusta tus estilos para adaptarse a dispositivos más grandes. Si diseñas primero el caso complicado, luego tendrás que trabajar para intentar hacerlo sencillo de nuevo.
     :::
 
     ```css title="src/styles/global.css" ins={23-100}
@@ -184,7 +184,7 @@ Dado que tu sitio se verá en distintos dispositivos, creemos una navegación de
     }
     ```
 
-Cambia el tamaño de la ventana y comprueba si se aplican diferentes estilos a diferentes anchos de pantalla. Tu header es ahora **responsivo** al tamaño de la pantalla mediante el uso de `@media` queries.
+Cambia el tamaño de la ventana y comprueba si se aplican diferentes estilos a diferentes anchos de pantalla. Tu header es ahora **responsivo** al tamaño de la pantalla mediante el uso de consultas `@media`.
 
 
 
