--- a/src/content/docs/es/tutorial/3-components/4.mdx
+++ b/src/content/docs/es/tutorial/3-components/4.mdx
@@ -3,9 +3,9 @@ type: tutorial
 title: Envía tu primer script al navegador
 i18nReady: true
 description: >-
-  Tutorial: Crea tu primer blog Astro —
+  Tutorial: Crea tu primer blog en Astro —
 
-  Añade interactividad del lado del cliente a tu navegación móvil con un script Astro
+  Agrega interactividad del lado del cliente a tu navegación móvil con una etiqueta de script de Astro
 ---
 import Badge from '~/components/Badge.astro';
 import Blanks from '~/components/tutorial/Blanks.astro';
@@ -20,11 +20,11 @@ Añadamos un menú hamburguesa para abrir y cerrar los enlaces en pantallas de d
 
 <PreCheck>
   - Crear un componente de menú de hamburguesa
-  - Escribe un `<script>` para que los visitantes de tu sitio puedan abrir y cerrar el menú de navegación
-  - Mueve tu JavaScript a un archivo `.js`.
+  - Escribir un `<script>` para que los visitantes de tu sitio puedan abrir y cerrar el menú de navegación
+  - Mover tu JavaScript a un archivo `.js`.
 </PreCheck>
 
-## Construir un componente hamburger
+## Construir un componente Hamburger
 
 Crea un componente `<Hamburger />` para abrir y cerrar tu menú móvil.
 
@@ -145,7 +145,7 @@ La adición de una etiqueta `<script>` proporciona JavaScript del lado del clien
     </body>
     ```
 
-2. Comprueba de nuevo la vista previa del navegador en varios tamaños y verifique que el menú de navegación funciona, que es responsivo al tamaño de la pantalla y que responde a las entradas del usuario en esta página.
+2. Comprueba de nuevo la vista previa del navegador en varios tamaños y verifica que el menú de navegación funciona, que es responsivo al tamaño de la pantalla y que responde a las entradas del usuario en esta página.
 
 ### Importar un archivo `.js`
 
@@ -174,10 +174,10 @@ En lugar de escribir JavaScript directamente en cada página, puede mover el con
     </body>
     ```
 
-3. Comprueba de nuevo la vista previa del navegador a un tamaño más pequeño y verifique que el menú hamburguesa sigue abriendo y cerrando los enlaces de navegación. 
+3. Comprueba de nuevo la vista previa del navegador a un tamaño más pequeño y verifica que el menú hamburguesa todavía abre y cierra los enlaces de tu navegación.
 
 
-4. Añade el mismo `<script>` con import a tus otras dos páginas, `about.astro` y `blog.astro` y comprueba que tienes un header responsivo e interactivo en cada página.
+4. Añade la misma etiqueta `<script>` con la importación a tus otras dos páginas, `about.astro` y `blog.astro` y comprueba que tienes una cabecera responsivo e interactivo en cada página.
 
      ```astro title="src/pages/about.astro & src/pages/blog.astro" ins={2-4}
       <Footer />
@@ -188,7 +188,7 @@ En lugar de escribir JavaScript directamente en cada página, puede mover el con
     ```
 
 :::note[takeaway]
-Anteriormente había utilizado JavaScript para construir partes de tu sitio:
+Anteriormente habías utilizado JavaScript para construir partes de tu sitio:
 
 - Definir dinámicamente el título y la cabecera de la página
 - Mapeo a través de una lista de competencias en la página Acerca de
