--- a/src/content/docs/es/tutorial/3-components/index.mdx
+++ b/src/content/docs/es/tutorial/3-components/index.mdx
@@ -28,7 +28,7 @@ En esta unidad, aprenderás a crear **componentes Astro** para reutilizar el có
 Construirás:
 - Un componente de navegación que presenta un menú de enlaces a sus páginas 
 - Un componente de pie de página para incluir en la parte inferior de cada página
-- Un componente de medios sociales, utilizado en el pie de página, que enlaza con las páginas de perfil.
+- Un componente de redes sociales, utilizado en el pie de página, que enlaza con las páginas de perfil.
 - Un componente Hamburger interactivo para alternar la navegación en el móvil
 
 A lo largo del proceso, utilizarás CSS y JavaScript para crear un diseño adaptable que reaccione a los tamaños de pantalla y a las entradas del usuario.
