--- a/src/content/docs/es/tutorial/4-layouts/1.mdx
+++ b/src/content/docs/es/tutorial/4-layouts/1.mdx
@@ -15,9 +15,9 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 
 <PreCheck>
-  - Refactorización de elementos comunes en un diseño de página
-  - Utiliza un elemento Astro `<slot />` para colocar el contenido de la página dentro de un diseño
-  - Pasar valores específicos de la página como props a su layout
+  - Refactorizar elementos comunes en un diseño de página
+  - Utilizar el elemento `<slot />` de Astro para colocar el contenido de la página dentro de un diseño
+  - Pasar valores específicos de la página como props a tu layout
 </PreCheck>
 
 Todavía tienes algunos componentes Astro repetidamente renderizados en cada página. Volvamos a refactorizar para crear un layout de página compartido.
