--- a/src/content/docs/es/tutorial/4-layouts/2.mdx
+++ b/src/content/docs/es/tutorial/4-layouts/2.mdx
@@ -18,7 +18,7 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 Ahora que ya tienes una plantilla para tus páginas, vamos a añadir una plantilla para las entradas del blog.
 
 <PreCheck>
-  - Cree una nueva plantilla de entrada de blog para tus archivos Markdown
+  - Crear una nueva plantilla de entrada de blog para tus archivos Markdown
   - Pasar valores frontmatter YAML como props al componente plantilla
 </PreCheck>
 
