--- a/src/content/docs/es/tutorial/4-layouts/3.mdx
+++ b/src/content/docs/es/tutorial/4-layouts/3.mdx
@@ -18,7 +18,7 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 Ahora que ya tienes escrito tu primer post `.md`, vamos a hacer que se parezca al resto de páginas de tu sitio web.
 
 <PreCheck>
-  - Anida el layout de los posts de tu blog dentro del layout de tu página principal
+  - Anidar el diseño de tus publicaciones de blog dentro del diseño principal de tu página
 </PreCheck>
 
 ## Anida tus dos plantillas
