--- a/src/content/docs/es/tutorial/1-setup/1.mdx
+++ b/src/content/docs/es/tutorial/1-setup/1.mdx
@@ -3,7 +3,7 @@ type: tutorial
 title: Prepara tu entorno de desarrollo
 i18nReady: true
 description: |-
-  Tutorial: Crea tu primer blog Astro —
+  Tutorial: Crea tu primer blog en Astro —
   Instala las herramientas locales que necesitarás para completar el tutorial
 ---
 import Badge from '~/components/Badge.astro';
@@ -16,14 +16,14 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 
 <PreCheck>
-  - Instala cualquier herramienta que vayas a utilizar para crear tu sitio web Astro.
+  - Instalar todas las herramientas que necesitarás para construir tu sitio web con Astro
 </PreCheck>
 
 ## Obtén las herramientas de desarrollo que necesites
 
 ### Terminal
 
-Utilizarás una **línea de comandos (terminal)** para crear tu proyecto Astro y ejecutar comandos clave para construir, desarrollar y probar tu sitio.
+Utilizarás una **línea de comandos (terminal)** para crear tu proyecto de Astro y ejecutar comandos clave para construir, desarrollar y probar tu sitio.
 
 Puedes acceder a la línea de comandos a través de un programa de terminal local para tu sistema operativo. Las aplicaciones más comunes son **Terminal** (MacOS/Linux), **Instructor de comandos** (Windows) y **Termux** (Android). Es probable que alguna de estas aplicaciones ya esté instalada en tu ordenador. 
 
@@ -31,7 +31,7 @@ Puedes acceder a la línea de comandos a través de un programa de terminal loca
 
 Para que Astro funcione en tu sistema, también necesitarás tener instalado [**Node.js**](https://nodejs.org/en/), versión `v16.12.0` o posterior.
 
-Para comprobar si ya tiene instalada una versión compatible, ejecute el siguiente comando en su terminal:
+Para comprobar si ya tienes instalada una versión compatible, ejecuta el siguiente comando en tu terminal:
 
 ```sh
 node -v
