--- a/src/content/docs/es/tutorial/1-setup/3.mdx
+++ b/src/content/docs/es/tutorial/1-setup/3.mdx
@@ -3,7 +3,7 @@ type: tutorial
 title: Escribe tu primera línea de Astro
 i18nReady: true
 description: |-
-  Tutorial: Crea tu primer blog Astro —
+  Tutorial: Crea tu primer blog en Astro —
   Realiza las primeras modificaciones en la página de inicio de tu proyecto tutorial
 ---
 import Badge from '~/components/Badge.astro';
@@ -16,7 +16,7 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 
 <PreCheck>
-  - Realiza la primera edición de tu nuevo sitio web
+  - Realizar la primera edición de tu nuevo sitio web
 </PreCheck>
 
 ## Edita tu página de inicio
@@ -45,7 +45,7 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 2. Edita el contenido de tu página `<body>`.
 
-    Escribe en el editor para cambiar el texto del encabezado de tu página y guarde el cambio.
+    Escribe en el editor para cambiar el texto del encabezado de tu página y guarda el cambio.
 
     ```astro title="src/pages/index.astro" del={2} ins={3}
     <body>
@@ -56,7 +56,7 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 3. Revisa la vista previa del navegador y deberías ver el contenido de tu página actualizado con el nuevo texto.
 
-¡Enhorabuena! Ya eres desarrollador Astro.
+¡Enhorabuena! Ya eres desarrollador de Astro.
 
 El resto de esta unidad te preparará para el éxito con el control de versiones y un sitio web publicado del que puedas presumir.
 
@@ -67,6 +67,6 @@ El resto de esta unidad te preparará para el éxito con el control de versiones
 
 <Checklist>
 - [ ] Puedo hacer cambios y verlos en el navegador.
-- [ ] ¡Soy un desarrollador Astro!
+- [ ] ¡Soy un desarrollador de Astro!
 </Checklist>
 </Box>
