--- a/src/content/docs/es/tutorial/1-setup/4.mdx
+++ b/src/content/docs/es/tutorial/1-setup/4.mdx
@@ -14,13 +14,13 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 
 <PreCheck>
-  - Pon en línea tu repositorio de proyectos
+  - Poner en línea tu repositorio de proyectos
 </PreCheck>
 
 Este tutorial utilizará GitHub para almacenar nuestro repositorio y conectarse a un host web. Te invitamos a utilizar el proveedor de git en línea de tu elección.
 
 :::note
-Si ya estás familiarizado con git y tienes tu propio flujo de trabajo, crea un nuevo repositorio de GitHub para tu proyecto utilizando el método que prefieras. Pasa a la página siguiente: ["Despliegue de su sitio en la Web"](/es/tutorial/1-setup/5/).
+Si ya estás familiarizado con git y tienes tu propio flujo de trabajo, crea un nuevo repositorio de GitHub para tu proyecto utilizando el método que prefieras. Pasa a la siguiente página: ["Despliegue de su sitio en la Web"](/es/tutorial/1-setup/5/).
 :::
 
 ## Crea un repositorio en GitHub
@@ -41,22 +41,22 @@ Aunque hay algunas maneras de obtener tu código local almacenado en GitHub, est
 En la última sección, hiciste un cambio en el contenido de tu página. Esto significa que los archivos de tu proyecto han cambiado y VS Code debería mostrar un número encima del icono del menú "Fuente". Esta pestaña de fuente es a donde irás regularmente para actualizar tus archivos en GitHub.
 
 
-1. Haz clic en la pestaña Control de código fuente en su VS Code para ver una lista de los archivos que han cambiado. Si aparece un mensaje indicando que necesita instalar `git`, sigue las instrucciones que se proporcionan y, a continuación, vuelve a cargar VS Code.
+1. Haz clic en la pestaña Control de código fuente en tu VS Code para ver una lista de los archivos que han cambiado. Si aparece un mensaje indicando que necesita instalar `git`, sigue las instrucciones que se proporcionan y, a continuación, vuelve a cargar VS Code.
 
 2. Haz clic en el menú <kbd>•••</kbd> "3 puntos" situado encima del mensaje de confirmación y selecciona <kbd>Remote</kbd> > <kbd>Add Remote</kbd>.
 
 3. Selecciona <kbd>Add Remote from GitHub</kbd>. Si es necesario, sigue los pasos de autenticación y, a continuación, vuelve a VS Code y repite esta acción.
 
-4. Deberías ver una lista de todos tus repositorios en GitHub. Elige el que creaste para este proyecto. Si no ves tu proyecto, pega directamente su URL de GitHub. Puede que también se te pida que le des un nombre local a este repositorio. Puedes seleccionar el nombre que quieras.
+4. Deberías ver una lista de todos tus repositorios en GitHub. Elige el que creaste para este proyecto. Si no ves tu proyecto, pega directamente tu URL de GitHub. Puede que también se te pida que le des un nombre local a este repositorio. Puedes seleccionar el nombre que quieras.
 
-5. En la parte superior del panel de menú, habrá un lugar para introducir un **commit message** (descripción de los cambios de su archivo). Escriba `initial commit` y pulse el botón <kbd>Commit</kbd> para confirmar los cambios.
+5. En la parte superior del panel de menú, habrá un lugar para introducir un **commit message** (descripción de los cambios de su archivo). Escribe `initial commit` y pulsa el botón <kbd>Commit</kbd> para confirmar los cambios.
 
 7. Puede que aparezca un mensaje diciéndote que no tienes "staged" commits, y preguntándote si quieres escanearlos. Haz clic en<kbd>Always</kbd> y continúa.
 
 8. Por último, la lista de archivos modificados debería sustituirse por un botón <kbd>Publish</kbd>. Haz click en él para enviar los cambios confirmados a GitHub.
 
 
-### Vea su proyecto en GitHub
+### Ver tu proyecto en GitHub
 
 Para verificar que tu proyecto está almacenado correctamente en GitHub, visita GitHub.com y busca en tu cuenta una lista de tus repositorios. Elige el nuevo que has creado y comprueba que contiene los archivos de tu proyecto Astro.
 
