--- a/src/content/docs/es/tutorial/1-setup/index.mdx
+++ b/src/content/docs/es/tutorial/1-setup/index.mdx
@@ -17,7 +17,7 @@ import Box from '~/components/tutorial/Box.astro';
 
 Ahora que ya sabes lo que vas a construir, vamos a preparar todas las herramientas que vas a necesitar. 
 
-Esta unidad te muestra cómo configurar tu entorno de desarrollo y desplegar en Netlify. Pase a la [Unidad 2](/es/tutorial/2-pages/) si ya te sientes cómodo con tu entorno y flujo de trabajo.
+Esta unidad te muestra cómo configurar tu entorno de desarrollo y desplegar en Netlify. Pasa a la [Unidad 2](/es/tutorial/2-pages/) si ya te sientes cómodo con tu entorno y flujo de trabajo.
 
 :::tip[utilizando stackblitz]
 
@@ -40,7 +40,7 @@ En el panel de archivos, debería ver `src/pages/index.astro`. Haz clic para abr
 
 **Crea un repositorio GitHub**
 
-1. Presiona en el botón <kbd>Conectar Repositorio</kbd> en la parte superior de la lista de archivos, ingresa una nombre para dicho repositorio y haz clic en <kbd>Crear Repo & push</kbd>. 
+1. Presiona el botón <kbd>Conectar Repositorio</kbd> en la parte superior de la lista de archivos, ingresa un nombre para dicho repositorio y haz clic en <kbd>Create Repo & push</kbd>. 
 
 2. Cuando tengas cambios para confirmar en GitHub, aparecerá un botón "Confirmar" en la parte superior izquierda de tu espacio de trabajo. Al hacer clic en él, podrás introducir un mensaje de confirmación y actualizar tu repositorio.
 
@@ -56,7 +56,7 @@ Si quieres desplegar tu sitio en Netlify, pasa a [Despliega tu sitio en la web](
 
 En esta unidad, **crearás un nuevo proyecto** que estará **almacenado online en GitHub** y **conectado a Netlify**. 
 
-A medida que escribas código, enviarás periódicamente tus cambios a GitHub. Netlify utilizará los archivos de tu repositorio de GitHub para construir tu sitio web, y luego lo publicará en Internet en una dirección única donde cualquiera podrá verlo.
+A medida que escribas código, enviarás periódicamente tus cambios a GitHub. Netlify utilizará los archivos de tu repositorio de GitHub para construir tu sitio web, y luego lo publicarás en Internet en una dirección única donde cualquiera podrá verlo.
 
 Cada vez que envíes un cambio a GitHub, se enviará una notificación a Netlify. Entonces, Netlify automáticamente reconstruirá y volverá a publicar tu sitio en vivo para reflejar esos cambios.
 
