--- a/src/content/docs/ja/contribute.mdx
+++ b/src/content/docs/ja/contribute.mdx
@@ -8,7 +8,7 @@ import ContributorList from '~/components/ContributorList.astro'
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 
-私たちは、どのような規模の貢献も、またどのようなスキルレベルの貢献者も歓迎します。オープンソースのプロジェクトとして、コントリビューターに対し報いることが重要だと考えています。PR、テクニカルライティング、提案された機能の実現のために、喜んでガイダンスを提供します。
+私たちは、どんな規模の貢献も、どんなスキルレベルの貢献者（コントリビューター）も歓迎します。オープンソースのプロジェクトとして、コントリビューターに対し報いることが重要だと考えています。PR、テクニカルライティング、提案された機能の実現のために、喜んでガイダンスを提供します。
 
 ## 貢献する方法
 
